<resources>
    <string name="app_name">自动记账</string>
    <string name="add_transaction">添加记录</string>
    <string name="amount">金额</string>
    <string name="category">分类</string>
    <string name="description">备注</string>
    <string name="date">日期</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="total_income">总收入</string>
    <string name="total_expense">总支出</string>
    <string name="balance">余额</string>
    <string name="no_transactions">暂无记录</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    
    <!-- 分类 -->
    <string name="category_food">餐饮</string>
    <string name="category_transport">交通</string>
    <string name="category_shopping">购物</string>
    <string name="category_entertainment">娱乐</string>
    <string name="category_medical">医疗</string>
    <string name="category_education">教育</string>
    <string name="category_salary">工资</string>
    <string name="category_bonus">奖金</string>
    <string name="category_investment">投资</string>
    <string name="category_other">其他</string>
    
    <!-- 错误信息 -->
    <string name="error_amount_required">请输入金额</string>
    <string name="error_category_required">请选择分类</string>
    <string name="error_invalid_amount">请输入有效金额</string>
    
    <!-- 权限相关 -->
    <string name="permission_sms_title">短信权限</string>
    <string name="permission_sms_message">需要短信权限来实现自动记账功能</string>
    <string name="permission_granted">权限已授予</string>
    <string name="permission_denied">权限被拒绝</string>

    <!-- 无障碍服务 -->
    <string name="accessibility_service_description">自动记账无障碍服务\n\n此服务用于监听银行和支付应用的界面变化，自动识别交易信息并记录到账本中。\n\n我们不会收集您的个人信息，所有数据仅存储在本地设备上。</string>

    <!-- 数组资源 -->
    <string-array name="bank_names">
        <item>支付宝</item>
        <item>微信支付</item>
        <item>工商银行</item>
        <item>建设银行</item>
        <item>农业银行</item>
        <item>中国银行</item>
        <item>招商银行</item>
        <item>交通银行</item>
    </string-array>

    <string-array name="bank_values">
        <item>alipay</item>
        <item>wechat</item>
        <item>icbc</item>
        <item>ccb</item>
        <item>abc</item>
        <item>boc</item>
        <item>cmb</item>
        <item>bankcomm</item>
    </string-array>

    <string-array name="theme_names">
        <item>跟随系统</item>
        <item>浅色主题</item>
        <item>深色主题</item>
    </string-array>

    <string-array name="theme_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string-array name="currency_names">
        <item>人民币 (¥)</item>
        <item>美元 ($)</item>
        <item>欧元 (€)</item>
    </string-array>

    <string-array name="currency_values">
        <item>cny</item>
        <item>usd</item>
        <item>eur</item>
    </string-array>
</resources>
